# context-graph-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  agent.py  config.py  context_graph_client.py  gds_client.py  main.py  vector_client.py
backend/app/models/: __init__.py  api.py  decisions.py  entities.py
backend/scripts/: generate_sample_data.py
cypher/: gds_projections.cypher  schema.cypher
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ContextGraphView.tsx  DecisionTracePanel.tsx  SchemaDrawer.tsx
frontend/components/ui/: provider.tsx
frontend/lib/: api.ts  system.ts
