[project]
name = "context-graph"
version = "0.1.0"
description = "Context Graph Demo - Decision traces for AI agents using Neo4j"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "neo4j==6.1.0",
    "google-genai==1.60.0",
    "ollama==0.6.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "faker==40.1.2",
    "httpx==0.28.1",
    "sse-starlette==3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
